# ercr_gazebo

./: CMakeLists.txt  README.md  package.xml
include/: dynamics_plugin.h  sensors_plugin.h  thrust_plugin.h
launch/: m200.launch
models/M200/: M200.sdf  model.config  model.sdf
models/M200/meshes/: kingfisher_base.stl
models/water_plane/: model.config  model.sdf
msgs/: CMakeLists.txt  Thrust.proto
scripts/: build_plugins_clean.sh  setup_gazebo.bash  setup_gazebo.sh
src/: dynamics_plugin.cpp  model_push.cpp  sensors_plugin.cpp  thrust_plugin.cpp
worlds/: water.world
