<?xml version="1.0"?>
<package format="2">
  <name>ercr_gazebo</name>
  <version>0.0.1</version>
  <description>Gazebo simulation package made for the Ecolymer River Cleaning Robot project.</description>

  <maintainer email="lmpimentel3@gatech.edu">Luis Pimentel</maintainer>

  <license>TODO</license>

  <author email="lmpimentel3@gatech.edu">Luis Pimentel</author>

  <depend>roscpp</depend>
  
  <buildtool_depend>catkin</buildtool_depend>

  <export> </export>

</package>
